Function Modified : Presigned URL COMPLETE!!!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.servlet.session.timeout=3m
+spring.cloud.aws.credentials.accessKey=AKIA47CR3ESV7N2DC64K
+spring.cloud.aws.credentials.secretKey=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
+spring.cloud.aws.s3.bucket=jungjuneyoung6
+spring.cloud.aws.region.static=ap-northeast-2
