presigned URL Arrays before

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=spvue
 spring.datasource.url=jdbc:mysql://j6yjj6j6jj5j.mysql.database.azure.com/vuepring
 spring.datasource.username=juneyoung6
-spring.datasource.password=dream6006!
+spring.datasource.password=1q2w3e4r!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-server.servlet.session.timeout=3m
+server.servlet.session.timeout=1h
 spring.cloud.aws.credentials.accessKey=AKIA47CR3ESV7N2DC64K
 spring.cloud.aws.credentials.secretKey=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
 spring.cloud.aws.s3.bucket=jungjuneyoung6
