sortAdded : BoxerController getAllBoxerByWeightClass

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-server.servlet.session.timeout=1h
+server.servlet.session.timeout=60m
 spring.cloud.aws.credentials.accessKey=AKIA47CR3ESV7N2DC64K
 spring.cloud.aws.credentials.secretKey=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
 spring.cloud.aws.s3.bucket=jungjuneyoung6
