jung /OAuth added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.cloud.aws.credentials.secretKey=21Cq7gBsp+vxY9ILEza/giyZKV+pnfRgh2FUKrat
 spring.cloud.aws.s3.bucket=jungjuneyoung6
 spring.cloud.aws.region.static=ap-northeast-2
 server.servlet.session.timeout=30m
+
+spring.profiles.include=oauth
