--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,25 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.2'
 	id 'io.spring.dependency-management' version '1.1.6'
+//	jib Plugin(for Docker)
+	id 'com.google.cloud.tools.jib' version '3.4.0'
+}
+
+jib {
+	from {
+		image = 'openjdk:21-slim'  // Java 21 버전 사용 (OpenJDK 22 SDK 가능)
+	}
+	to {
+		image = 'jyjy6/vuepringback'  // Docker Hub 이미지 이름
+		tags = ['latest']
+	}
+	container {
+		ports = ['8080']
+		environment = [
+				'SPRING_PROFILES_ACTIVE': 'prod'
+		]
+		jvmFlags = ['-Xms512m', '-Xmx1024m']
+	}
 }
 
 group = 'com.example'
