socket+chat+docker complete

--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ dependencies {
 	implementation 'org.hibernate:hibernate-core:6.2.0.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
-
+	implementation 'com.corundumstudio.socketio:netty-socketio:1.7.23'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
